| Bug #12659 | Federated storage engine needs better handling of other storage engine errors | ||
|---|---|---|---|
| Submitted: | 18 Aug 2005 21:23 | Modified: | 30 Nov 2005 15:40 |
| Reporter: | Patrick Galbraith | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Eric Herman | CPU Architecture: | Any |
[18 Aug 2005 21:23]
Patrick Galbraith
[9 Sep 2005 1:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29542
[9 Sep 2005 15:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29572
[30 Nov 2005 15:40]
Eric Herman
there is still room for a little bit of clean-up with federated errors, but things are better.
