Improvement to federated for BUG#12659 Now many direct references to my_error() have been removed.

mysql-test/r/federated_archive.result:
  new results with new error message
mysql-test/t/federated_archive.test:
  corrected error number
sql/ha_federated.cc:
  some minor 80 column formatting
  corrected some error handling to be more handler print_error friendly
  moved duplicate code into new "stash_remote_error" function
sql/ha_federated.h:
  added error number, and places to stash error message and number
  added private method to stash error